Product data service. Show products and product detail

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
+<mat-spinner *ngIf="loading"
+             class="spinner"
+             color="accent"
+             diameter="80"
+             strokeWidth="6"></mat-spinner>
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
