--- a/src/app/products/products-list/products-list.component.scss
+++ b/src/app/products/products-list/products-list.component.scss
@@ -31,3 +31,22 @@ mat-card-title,
 .fill-remaining-space {
   flex: 1 1 auto;
 }
+.product-search {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 1rem;
+
+  mat-form-field {
+    width: 250px;
+  }
+
+  @media screen and (max-width: 650px){
+    justify-content: center;
+  }
+}
+.spinner {
+  position: fixed;
+  top: calc(50% - 35px);
+  left: calc(50% - 35px);
+  z-index: 10;
+}
