Added cart shopping popup, and responsive web desing (popup, toolbar)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,3 +5,7 @@
              strokeWidth="6"></mat-spinner>
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
+
+<div class="popup-cart">
+  <router-outlet name="popup"></router-outlet>
+</div>
