--- a/src/app/products/product-detail/product-detail.component.html
+++ b/src/app/products/product-detail/product-detail.component.html
@@ -1,6 +1,6 @@
 <div class="page-container">
   <div class="page-content">
-    <a class="back-button" mat-stroked-button routerLink="/products">
+    <a class="back-button" mat-raised-button routerLink="/products">
       <mat-icon>arrow_back</mat-icon>
       Regresar
     </a>
