--- a/src/app/products/products-list/products-list.component.scss
+++ b/src/app/products/products-list/products-list.component.scss
@@ -35,6 +35,7 @@ mat-card-title,
   display: flex;
   justify-content: flex-end;
   margin-bottom: 1rem;
+  margin-top: 3.5rem;
 
   mat-form-field {
     width: 250px;
