--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -1,16 +1,27 @@
-<mat-toolbar color="primary">
-  <a class="name-app" mat-button routerLink="/">
+<mat-toolbar color="primary"
+             class="app-toolbar">
+  <a class="name-app"
+     mat-button
+     routerLink="/">
     <mat-icon>store</mat-icon>
     {{appName}}
   </a>
-  <a mat-button routerLink="/products" routerLinkActive="active">
+  <a mat-button
+     class="nav-products"
+     routerLink="/products"
+     routerLinkActive="active">
     Productos
   </a>
   <span class="fill-remaining-space"></span>
-  <a mat-button routerLink="/login" routerLinkActive="active">
+  <a mat-button
+     class="nav-login"
+     routerLink="/login"
+     routerLinkActive="active">
     Inicia Sesión
   </a>
-  <a mat-icon-button>
+  <a mat-icon-button
+     class="nav-cart"
+     (click)="toggleCart()">
     <mat-icon>shopping_cart</mat-icon>
   </a>
 </mat-toolbar>
