--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 1rem;
+  padding: 5rem 1rem 1rem 0;
 }
 .home-title {
   text-align: center;
