--- a/src/app/products/products-list/products-list.component.html
+++ b/src/app/products/products-list/products-list.component.html
@@ -28,7 +28,7 @@
           </mat-card-content>
           <div class="fill-remaining-space"></div>
           <mat-card-actions>
-            <button mat-icon-button>
+            <button mat-icon-button (click)="addProduct(product)">
               <mat-icon>add_shopping_cart</mat-icon>
             </button>
           </mat-card-actions>
