--- a/src/app/popup-cart/popup-cart.component.scss
+++ b/src/app/popup-cart/popup-cart.component.scss
@@ -1,6 +1,8 @@
 .cart-list {
   padding-left: 0;
   list-style: none;
+  max-height: 200px;
+  overflow-y: auto;
 }
 .cart-title {
   font-size: 1.25rem;
@@ -48,4 +50,9 @@
   @media screen and (max-width: 420px) {
     width: 65px;
   }
+}
+.cart-item-total {
+  text-align: right;
+  font-size: 1rem;
+  color: rgba(0, 0, 0, .87);
 }
